--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -353,6 +353,19 @@ repo = 'lewis6991/gitsigns.nvim'
 on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 lua_source = '''
     vim.cmd.source('~/dotfiles/.vim/lua/gitsigns.lua')
+    vim.keymap.set('n', '<Leader>gsb', require('gitsigns').stage_buffer, {desc = 'buffer'})
+    vim.keymap.set({'n', 'v'}, '<Leader>gsh', require('gitsigns').stage_hunk, {desc = 'hunk(toggle)'})
+    vim.keymap.set('n', '<Leader>grb', require('gitsigns').reset_buffer, {desc = 'buffer'})
+    vim.keymap.set({'n', 'v'}, '<Leader>grh', require('gitsigns').reset_hunk, {desc = 'hunk'})
+    vim.keymap.set('n', '<Leader>gdc', function() require('gitsigns').diffthis('~1') end, {desc = 'last commit'})
+    vim.keymap.set('n', '<Leader>gdi', require('gitsigns').diffthis, {desc = 'index'})
+    vim.keymap.set('n', '<Leader>gtb', require('gitsigns').toggle_current_line_blame, {desc = "blame (line)"})
+    vim.keymap.set('n', '<Leader>gtl', require('gitsigns').toggle_linehl, {desc = "line highlight"})
+    vim.keymap.set('n', '<Leader>gtn', require('gitsigns').toggle_numhl, {desc = "num highlight"})
+    vim.keymap.set('n', '<Leader>gts', require('gitsigns').toggle_signs, {desc = "signs"})
+    vim.keymap.set('n', '<Leader>gtw', require('gitsigns').toggle_word_diff, {desc = "word diff"})
+    vim.keymap.set('n', '<Leader>gb', function() require('gitsigns').blame_line({full=true}) end, {desc = "blame(full)"})
+    vim.keymap.set('n', '<Leader>gp', require('gitsigns').preview_hunk, {desc = "preview"})
 '''
 
 [[plugins]]
@@ -463,28 +476,10 @@ lua_source = '''
 local wk = require('which-key')
 wk.add({
     {"<Leader>g", group = "gitsigns", mode = {"n", "v"}},
-
     {"<Leader>gs", group = "stage", mode = {"n", "v"}},
-    {"<Leader>gsb", function() vim.cmd.Gitsigns('stage_buffer') end, desc = "buffer"},
-    {"<Leader>gsh", function() vim.cmd.Gitsigns('stage_hunk') end, desc = "hunk (toggle)", mode = {"n", "v"}},
-
     {"<Leader>gr", group = "reset", mode = {"n", "v"}},
-    {"<Leader>grb", function() vim.cmd.Gitsigns('reset_buffer') end, desc = "buffer"},
-    {"<Leader>grh", function() vim.cmd.Gitsigns('reset_hunk') end, desc = "hunk", mode = {"n", "v"}},
-
     {"<Leader>gd", group = "diff"},
-    {"<Leader>gdc", function() vim.cmd.Gitsigns('diffthis ~1') end, desc = "last commit"},
-    {"<Leader>gdi", function() vim.cmd.Gitsigns('diffthis') end, desc = "index"},
-
-    {"<Leader>gt", group = "gitsigns (toggle)"},
-    {"<Leader>gtb", function() vim.cmd.Gitsigns('toggle_current_line_blame') end, desc = "blame (line)"},
-    {"<Leader>gtl", function() vim.cmd.Gitsigns('toggle_linehl') end, desc = "line highlight"},
-    {"<Leader>gtn", function() vim.cmd.Gitsigns('toggle_numhl') end, desc = "num highlight"},
-    {"<Leader>gts", function() vim.cmd.Gitsigns('toggle_signs') end, desc = "signs"},
-    {"<Leader>gtw", function() vim.cmd.Gitsigns('toggle_word_diff') end, desc = "word diff"},
-
-    {"<Leader>gb", function() vim.cmd.Gitsigns('blame_line full=true') end, desc = "blame(full)"},
-    {"<Leader>gp", function() vim.cmd.Gitsigns('preview_hunk') end, desc = "preview"},
+    {"<Leader>gt", group = "toggle"},
 
     {"<Leader>s", group = "session"},
 
