refactor: convert ddu_rc.vim to ddu_rc.lua

--- a/.vim/toml/ddu_lazy.toml
+++ b/.vim/toml/ddu_lazy.toml
@@ -3,7 +3,7 @@ repo = 'Shougo/ddu.vim'
 depends = ['denops.vim']
 on_source = ['denops.vim']
 lua_source = '''
-    vim.cmd.source('~/dotfiles/.vim/settings/ddu_rc.vim')
+    require('ddu_rc')
 '''
 
 [[plugins]]
