Revert "feat: use require instead of vim.cmd.source to load configs written in lua"
This reverts commit 71e4817d98a16be761680741babdf09d3bd1d916.

--- a/.vim/toml/ddc_lazy.toml
+++ b/.vim/toml/ddc_lazy.toml
@@ -88,7 +88,7 @@ on_source = ['ddc.vim']
 repo = 'Shougo/ddc-source-lsp'
 on_source = ['ddc.vim']
 lua_post_source = '''
-    require('nvim-lsp.lua')
+    vim.cmd.source('~/dotfiles/.vim/lua/nvim-lsp.lua')
 '''
 
 [[plugins]]
