fix: change not to merge nvim-treesitter plugin dir
Prevent hash verification process from not working properly in the
process of checking for parser updates in nvim-treesitter.
Since this can be caused by the plugin merging feature in dein.vim,
merging is disabled in nvim-treesitter.

--- a/.vim/toml/treesitter_lazy.toml
+++ b/.vim/toml/treesitter_lazy.toml
@@ -1,5 +1,6 @@
 [[plugins]]
 repo = 'nvim-treesitter/nvim-treesitter'
+merged = 0
 on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 on_cmd = ['TSUpdate', 'TSUpdateSync']
 lua_source = '''
