feat: use zsh for default shell in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ set -g terminal-overrides 'xterm:colors=256'
 
 set -g mouse on
 
+set-option -g default-shell /bin/zsh
+
 # prefix: C-b -> C-g
 set -g prefix C-g
 unbind C-b
