feat: add clipboard integration with win32yank.exe for WSL

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,4 +40,11 @@ set-option -g status-right "#[fg=colour255] %Y/%m/%d %H:%M "
 
 set -g message-style fg="white",bg="colour27",bold
 
+# copy (WSL -> Windows)
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i --crlf"
+
+# paste (Windows -> WSL)
+unbind p
+bind p run "tmux set-buffer -- \"$(win32yank.exe -o --lf)\"; tmux paste-buffer"
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
