feat(vim): add sidekick.nvim configuration

--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -264,3 +264,18 @@ require("mcphub").setup({
 [[plugins]]
 repo = 'folke/sidekick.nvim'
 on_event = ['BufEnter']
+lua_add = '''
+vim.keymap.set({ "n", "t", "i", "x" }, "<C-.>", function() require("sidekick.cli").toggle({ name = "gemini", focus = true }) end, { desc = "Sidekick Toggle" })
+vim.keymap.set("n", "<Leader>ka", function() require("sidekick.cli").toggle({ name = "gemini", focus = true }) end, { desc = "Sidekick Toggle CLI" })
+vim.keymap.set("n", "<Leader>ks", function() require("sidekick.cli").select() end, { desc = "Select CLI" })
+vim.keymap.set("n", "<Leader>kd", function() require("sidekick.cli").close() end, { desc = "Detach a CLI Session" })
+vim.keymap.set({ "x", "n" }, "<Leader>kt", function() require("sidekick.cli").send({ msg = "{this}" }) end, { desc = "Send This" })
+vim.keymap.set("n", "<Leader>kf", function() require("sidekick.cli").send({ msg = "{file}" }) end, { desc = "Send File" })
+vim.keymap.set("x", "<Leader>kv", function() require("sidekick.cli").send({ msg = "{selection}" }) end, { desc = "Send Visual Selection" })
+vim.keymap.set({ "n", "x" }, "<Leader>kp", function() require("sidekick.cli").prompt() end, { desc = "Sidekick Select Prompt" })
+'''
+lua_source = '''
+require('sidekick').setup({
+    nes = { enabled = false },
+})
+'''
