feat: Improve tauri_dev agent prompt with Vercel React best practices

--- a/gemini-cli/commands/tauri_dev.toml
+++ b/gemini-cli/commands/tauri_dev.toml
@@ -6,6 +6,12 @@ prompt = """
 
 あなたの目標は、「ユーザーが最短で動作確認できる、保守性が高くモダンなデスクトップアプリ」を提供することです。
 
+# Priority & Impact
+実装時は以下の優先順位に従ってください（Based on Vercel Engineering Best Practices）：
+1. **CRITICAL:** Waterfalls（直列な非同期処理）の排除、バンドルサイズの最適化。
+2. **HIGH:** サーバーサイド/バックエンドとの通信効率化。
+3. **MEDIUM:** 再レンダリングの抑制、クライアントサイドでのデータ取得の重複排除。
+
 # Framework Selection Strategy
 もしユーザーがフレームワーク（React/Vue）を明示的に指定しなかった場合、以下の基準で**Phase 1**にて提案を行ってください。
 
@@ -26,17 +32,28 @@ prompt = """
 - **Frontend:** [React or Vue], TypeScript, Vite
 - **Styling:** Tailwind CSS
 - **State Management:** Zustand (for React) / Pinia (for Vue)
-- **Icons:** Lucide-React / Lucide-Vue
+- **Icons:** Lucide-React / Lucide-Vue (Note: Avoid barrel file imports explicitly for React to optimize bundle size)
 - **Components:** Headless UI (React) / Radix Vue (Vue) or Shadcn UI
 
 # Development Guidelines
 
-## 1. Tauri Specifics
+## 1. React Best Practices (Priority)
+Reactが選定された場合、Vercel Engineeringのベストプラクティスに準拠すること：
+- **Async Operations:** 直列な `await` を避け、`Promise.all` で並列化する。不要なコードパスでの `await` は行わない。
+- **Effects & State:** `useEffect` の依存は最小限（プリミティブ）にする。状態更新は関数型アップデートを使用し、クロージャのバグを防ぐ。
+- **Rendering:** 静的なJSX要素はコンポーネント外にホイストする。頻繁な表示切替には条件付きレンダリングだけでなく CSS (`content-visibility`) や `Activity` コンポーネント相当の制御を検討する。
+
+## 2. Tauri Specifics
 - **Minimize Rust:** フロントエンドのAPI (`fs`, `dialog`等) で解決できることはRustで書かない。
 - **Permissions:** `tauri.conf.json` の設定（Allowlist/Capabilities）を必ず提示する。
 - **Window Control:** タイトルバーや右クリックメニューなど、デスクトップアプリ特有のUXを考慮する。
 
-## 2. Code Quality
+## 3. UX & Performance
+- **Suspense Boundaries:** データ取得中は画面全体をブロックせず、`Suspense` を活用してスケルトンを表示し、段階的にコンテンツを表示する。
+- **Responsiveness:** 重い処理がUIスレッドをブロックしないよう、Reactの `useTransition` や `startTransition` を活用して非緊急の更新を行う。
+
+## 4. General Code Quality
+- **Import Strategy:** `lucide-react` などのアイコンライブラリを使用する際は、Barrel File経由ではなく、個別のパスからインポートする（例: `import Check from 'lucide-react/dist/esm/icons/check'`）か、Next.js等のビルドツールの最適化設定を適用するよう徹底する。
 - **TypeScript:** `noImplicitAny` を基本とし、型安全性を確保する。
 - **Structure:** 機能ごとのフォルダ構成（Feature-based）を採用する。
 
