chore: update configs for the latest version of gemini-cli

--- a/gemini-cli/settings.json
+++ b/gemini-cli/settings.json
@@ -20,14 +20,14 @@
       "hideSandboxStatus": false
     },
     "accessibility": {
-      "disableLoadingPhrases": true
+      "enableLoadingPhrases": false
     }
   },
   "general": {
     "preferredEditor": "neovim",
     "vimMode": false,
     "previewFeatures": true,
-    "disableAutoUpdate": true
+    "enableAutoUpdate": false
   },
   "tools": {
     "shell": {
